application/promotions/frontend.yaml
# Copyright (c) HashiCorp, Inc.
# SPDX-License-Identifier: MPL-2.0

---
apiVersion: v1
kind: Service
metadata:
  name: dashboard
spec:
  selector:
    app: dashboard
  ports:
  - name: http
    protocol: TCP
    port: 9090
    targetPort: 9090
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dashboard
  labels:
    app: dashboard
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dashboard
  template:
    metadata:
      labels:
        app: dashboard
      annotations:
        "consul.hashicorp.com/connect-inject": "true"
    spec:
      serviceAccountName: dashboard
      containers:
      - name: dashboard
        image: nicholasjackson/fake-service:v0.25.1
        ports:
        - containerPort: 9090
